--- a/sandbox/composer.json
+++ b/sandbox/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "nuwave/lighthouse": "^5.57",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "require-dev": {
